--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "hackbotsw",
   "version": "1.0.0",
   "description": "backend for hackbot SW",
-  "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && babel src --out-dir dist"
+    "build": "rm -rf dist && babel src --out-dir dist",
+    "start": "node dist/server/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/iAbhishek91/hackbotSW#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "core-js": "^3.2.1",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
